--- a/headless-cms/package.json
+++ b/headless-cms/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.3",
-    "nuxt": "^3.6.5"
+    "nuxt": "^3.6.5",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "@storyblok/nuxt": "^5.6.2"
